# interject

./: .gitignore  .gitleaksignore  AGENTS.md  CLAUDE.md  PHILOSOPHY.md  README.md  pyproject.toml
.claude-plugin/: integration.json  plugin.json
config/: default.yaml  interject-cron  interject-scan.service  interject-scan.timer
docs/: interject-vision.md  roadmap.json  vision.md
docs/brainstorms/: 2026-02-15-interject-integration-sweep-brainstorm.md
docs/plans/: 2026-02-15-interject-design.md  2026-02-15-interject-integration-sweep.md  2026-02-15-interject-plan-best-5-frameworks-to-build-multi-agent-ai-applications-getst.md  2026-02-15-interject-plan-claude-codepluginsreadmemd-at-main.md  2026-02-15-interject-plan-create-plugins-claude-code-docs.md
docs/research/: 2026-02-15-interject-12-frameworks-to-build-mcp-ai-agents-alex-xu-linkedin.md  2026-02-15-interject-4-hooks-that-let-claude-code-run-autonomously-with-zero-baby.md  2026-02-15-interject-a-tool-for-in-depth-analysis-of-code-execution-reasoning.md  2026-02-15-interject-ai-agent-lands-prs-in-major-oss-projects-targets-maintainers.md  2026-02-15-interject-ai-agent-marketplace-index-claude-code-mcp-setup-guide-2026.md  2026-02-15-interject-ai-agent-orchestration-frameworks-which-one-works-best-for-y.md  (+125 more)
hooks/: hooks.json  session-start.sh
scripts/: bump-version.sh
skills/: discover.md  profile.md  scan.md
sources/: anthropic.py  arxiv.py  base.py  github.py
tests/: pyproject.toml  test_awareness.py  test_db.py  test_engine.py  test_feedback.py  test_outputs.py  test_sources.py
(+24 files in other folders)
